2008-02-21  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (top level): Remove old BASH test and change
	to more reliable process substitution test.
	(CygbuildPatchApplyMaybe): Add 2nd argument MSG.
	(CygbuildCmdPrepMain): Move message 'applying included patches ...'
	to the `CygbuildPatchApplyMaybe'. Improve error code handling
	after `CygbuildPatchApplyMaybe'.
	(CygbuildMakefileRunClean): Remove unused function.
	(CygbuildCmdCleanMain): write messages only during verbose.
	(CygbuildHelpShort): Correct option -C to -c. Rephrase few
	paragrahs.
	(CygbuildIsSourceUnpacked): New.
	(CygbuildCmdPrepPatch): Use `CygbuildIsSourceUnpacked'. Remove
	extra rm *.o call.
	(CygbuildPatchApplyRun): Add 'local opt', which causes nasty bug
	During source package 'prep' phase.
	(CygbuildCmdInstallCheckReadme): Shorten path names in messages.

2008-02-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildVersionInfo): Fix small error
	in version detection: foo1.2b was interpreted as [foo 1.2], not
	[foo 1.2b].
	(CygbuildMakefileName): Add few more guesses for the makefile.
	(CygbuildMakefilePrefixIsStandard): Reduce guessed to $@ and *.mk.
	Add error checking for empty files.
	(CygbuildMakefileRunInstall): Send makefile name to
	`CygbuildMakefilePrefixCheck' and `CygbuildMakefilePrefixIsStandard'.
	(CygbuildMakefilePrefixCheck): Add input arg MAKEFILE and throw away
	Makefile name guessing code.
	(CygbuildCmdMkpatchMain): Check unpatch failure.
	(CygbuildDefineGlobalCompile): Remove C++ autodetections.
	(CygbuildPatchPrefixStripCountFromFilename): Return error code.
	(CygbuildPatchPrefixStripCountFromContent): Return error code.
	Improve -p1 detection.
	(CygbuildMatchRemoveWord): New.
	(CygbuildBootVariablesGlobalMain): Remove --binary from CYGBUILD_PATCH_OPT,
	Under Cygwin it is legal only if destination file has CRLF.
	(CygbuildPatchApplyRun): Use `CygbuildFileIsCRLF' to set patch
	option --binary
	(CygbuildFileIsCRLF): Check that FILE exists.